--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,65 @@
+:root {
+    --main-bg-color:var(#252326);
+}
+
 
 body {
     font-family: 'Poppins', sans-serif;
+    background-color: #252326;
 }
 
 .container {
-    display:flex;
-    justify-content: space-around;
+    display:flexbox;
+   
+    color: aliceblue;
 }
 
+#table {
+
+}
+
+th {
+    color: white;
+}
+td{
+    color: aliceblue;
+}
+tr:hover{
+    color: white;
+    background-color: white;
+    text-decoration: underline;
+
+}
+
+#closeIcon {
+    transform: rotate(45deg);
+    float: right;
+    position: absolute;
+    margin-top: 1%;
+    margin-left: 34%;
+    
+    color: #F21F0C;
+   
+}
+
+.modalForm {
+    width: 38.5%;
+    justify-content: space-around;
+    margin: 0 auto;
+    z-index: 3;
+   
+}
 form {
     min-width: 30vw;
     max-height: 40vh;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    width: 100%;
+    background-color: #A69981;
+    padding: 3%;
+    border-radius: 20px;
+    
 }
 
 form h2 {
@@ -23,9 +69,15 @@ form h2 {
 form input {
     padding: .5rem;
     border: 0;
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid white;
     border-radius: 0;
     font-size: 16px;
+    background-color: #A69981;
+    color: rgb(255, 255, 255);
+}
+
+form input::placeholder {
+    color: #d3d3d3;
 }
 
 form input:focus {
@@ -38,11 +90,13 @@ form input:focus {
     padding: .5rem;
     transition: .2s ease;
     font-size: 20px;
-    background-color: white;
+    background-color: rgb(226, 226, 226);
+    border-bottom-right-radius: 15px;
+    border-bottom-left-radius: 15px;
 }
 
 #botao:hover {
-    background-color: black;
+    background-color: #F21F0C;
     color: white;
 }
 
@@ -75,5 +129,31 @@ input[type=number] {
     }
     form {
         max-height: 60vh;
+    }
+}
+
+
+@keyframes changeOpacity {
+    to {
+        transform: translateX(-300);
+        filter: opacity(1);
+    }
+    from {
+        filter: opacity(0.3);
+        transform: translateX(0);
+    }
+}
+
+
+@keyframes changeOpacity2 {
+    to {
+        
+        filter: opacity(0.3);
+    }
+    from {
+        
+        
+        filter: opacity(1);
+        
     }
 }
