--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ tr:hover{
 form {
     min-width: 30vw;
     max-height: 40vh;
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: space-around;
     width: 100%;
