--- a/styles.css
+++ b/styles.css
@@ -47,12 +47,12 @@ tr:hover{
     justify-content: space-around;
     margin: 0 auto;
     z-index: 3;
-   
+   display: none;
 }
 form {
     min-width: 30vw;
     max-height: 40vh;
-    display: none;
+    display: flex;
     flex-direction: column;
     justify-content: space-around;
     width: 100%;
