--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ tr:hover{
     justify-content: space-around;
     margin: 0 auto;
     z-index: 3;
-   display: none;
+   display: block;
 }
 form {
     min-width: 30vw;
